[gd_scene load_steps=5 format=2]

[ext_resource path="res://characters/player/weapons/magicBook/Fireball.gd" type="Script" id=1]
[ext_resource path="res://assets/arrow.png" type="Texture" id=2]
[ext_resource path="res://characters/player/weapons/magicBook/FireballExplosion.tscn" type="PackedScene" id=3]

[sub_resource type="CircleShape2D" id=1]
radius = 3.55

[node name="Fireball" type="Node2D"]
script = ExtResource( 1 )
FireballExplosion = ExtResource( 3 )

[node name="Hitbox" type="Area2D" parent="."]
collision_layer = 8
collision_mask = 5

[node name="circleProjectile" type="CollisionShape2D" parent="Hitbox"]
shape = SubResource( 1 )

[node name="Fireball" type="Sprite" parent="."]
position = Vector2( 1.78814e-07, 1.49012e-07 )
scale = Vector2( 0.375, 0.375 )
texture = ExtResource( 2 )

[node name="LifeTimer" type="Timer" parent="."]
wait_time = 10.0
one_shot = true

[node name="FadeOut" type="AnimationPlayer" parent="."]

[connection signal="body_entered" from="Hitbox" to="." method="_on_Area2D_body_entered"]
[connection signal="timeout" from="LifeTimer" to="." method="_on_LifeTimer_timeout"]
